# DevOpsEdgePythonExercise

./: .env  .gitignore  Dockerfile  README.md  bot.py  details_library-0.4.1-py3-none-any.whl  pyproject.toml  requirements.txt
src/details_library/: cli.py
wheel/: pyproject.toml
wheel/src/details_library/: cli.py  csv_module.py
wheel/src/details_library.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
